tests/checker/bad/procedure_bad_type.scilla
scilla_version 0

library MyLib

contract ProcedureCallBadType ()

field f : Int32 = Int32 42

procedure Proc1(arg1 : Int32, arg2 : (List Bool))
  new_arg = Int32 0
end

transition Trans1()
  arg1 = Int32 0;
  arg2 = Nil {Bool};
  (* Wrong type of arguments *)
  Proc1 arg2 arg1
end

transition Trans2()
  arg1 = Int32 0;
  arg2 = Nil {Bool};
  (* Correct *)
  Proc1 arg1 arg2 
end